# skia_tutorial

./: .gitignore  README.md
01_test_install/: CMakeLists.txt  compile_commands.json  main.cpp  xmake.lua
02_skia_with_glfw/: CMakeLists.txt  glfw_helper.cpp  main.cpp
03_skia_skp/: CMakeLists.txt  compile_commands.json  main.cpp  output.skp  xmake.lua
05_50_percent_gray/: CMakeLists.txt  compile_commands.json  main.cpp  xmake.lua
06_using_vulkan_backend/: CMakeLists.txt  main.cpp  readme.md
50_percent_srgb/: compile_commands.json  main.cpp
AutoCanvasRestore_SkCanvas_star/: compile_commands.json  main.cpp  xmake.lua
AutoCanvasRestore_restore/: compile_commands.json  main.cpp  xmake.lua
Bitmap_012/: compile_commands.json  main.cpp  xmake.lua
Bitmap_HeapAllocator_allocPixelRef/: compile_commands.json  main.cpp  xmake.lua
Bitmap_allocN32Pixels/: compile_commands.json  main.cpp  xmake.lua
Bitmap_allocPixels/: compile_commands.json  main.cpp  xmake.lua
Bitmap_allocPixelsFlags/: compile_commands.json  main.cpp
Bitmap_bounds/: compile_commands.json  main.cpp  xmake.lua
Bitmap_colorspace/: compile_commands.json  main.cpp  xmake.lua
Bitmap_erase/: compile_commands.json  main.cpp  xmake.lua
Bitmap_extractAlpha/: compile_commands.json  main.cpp  xmake.lua
Bitmap_extractSubset/: main.cpp
Bitmap_getAddr/: main.cpp
Bitmap_getBounds/: main.cpp  xmake.lua
Bitmap_getColor/: main.cpp
Bitmap_getGenerationID/: main.cpp
Bitmap_getPixels/: main.cpp
Bitmap_installPixels/: main.cpp  xmake.lua
Bitmap_isImmutable/: main.cpp  xmake.lua
(+105 files in other folders)
